# dbt_demo_healthcare

./: .gitignore  README.md  dbt_project.yml  packages.yml  pyproject.toml  requirements.txt  sample_profiler.ipynb
.github/: CODEOWNERS  pull_request_template.md
macros/: age_general.sql  age_when_deceased.sql  calculate_age.sql  calculate_age.yml
models/core/: _core_docs.md  fct_hospital_events.sql  fct_hospital_events.yml
models/docs/: _staging_docs.md  healthcare_demo.md
models/marts/core/: _core_docs.md  dim_encounters.sql  dim_encounters.yml  dim_organizations.sql  dim_organizations.yml  dim_patients.sql  dim_patients.yml  fct_claims.sql  fct_claims.yml  fct_hospital_events.sql  fct_hospital_events.yml  fct_patient_conditions.sql  fct_patient_conditions.yml
models/marts/staging/: _stg.md  _stg_docs.md  src_demo_healthcare.yml  stg_claims.sql  stg_claims.yml  stg_conditions.sql  stg_encounters.sql  stg_encounters.yml  stg_organizations.sql  stg_organizations.yml  stg_patients.sql  stg_patients.yml  stg_procedures.sql  stg_procedures.yml
models/staging/: _stg_docs.md  src_demo_healthcare.yml  stg_claims.yml  stg_conditions.sql  stg_conditions.yml  stg_encounters.sql  stg_organizations.yml  stg_patients.yml  stg_procedures.yml
